--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
             opacity: 0.9;
         }
 
+        /* Logo in the Header */
+        .header-logo {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            height: 100px; /* Adjust the height as needed */
+            width: auto;
+        }
     </style>
 </head>
 <body>
@@ -125,6 +133,7 @@
     <header>
         <h1>VRP Red Bull Australia Reports</h1>
         <p>Interactive Power BI dashboards to empower your decisions</p>
+        <img src="Bolt_monoreversed.png" alt="Company Logo" class="header-logo">
     </header>
 
     <!-- Main Content (Embedded Power BI Report) -->
